# routes/api.php
@@ -2,7 +2,15 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\Customer\CustomerController;
 
 Route::prefix('auth')->group(function () {
     Route::post('login', [AuthController::class, 'login']);
+});
+
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::prefix('customers')->group(function () {
+        Route::post('/', [CustomerController::class, 'store']);
+    });
 });
